Temporarily remove showcase images and add update notice

--- a/index.html
+++ b/index.html
@@ -107,18 +107,12 @@
     <section class="card section">
       <div class="section-head">
         <h2>界面展示</h2>
-        <p>来自 `Flow` 项目目录的实际图片素材</p>
+        <p>展示图待更新</p>
       </div>
-      <div class="gallery">
-        <figure class="shot">
-          <img src="assets/flow-overview.png" alt="Flow 插件功能示意" />
-          <figcaption>Flow 插件功能入口与界面示意。</figcaption>
-        </figure>
-        <figure class="shot">
-          <img src="assets/flow-note.png" alt="Flow 使用注意事项" />
-          <figcaption>打包扩展与固定扩展 ID 的说明截图。</figcaption>
-        </figure>
-      </div>
+      <article class="feature">
+        <h3>最新界面图准备中</h3>
+        <p>旧版本展示图已临时下线，收到你的新图片后会立即替换并重新发布。</p>
+      </article>
     </section>
 
     <section id="pricing" class="card section">
