Replace showcase with latest Flow UI screenshot

--- a/index.html
+++ b/index.html
@@ -107,12 +107,14 @@
     <section class="card section">
       <div class="section-head">
         <h2>界面展示</h2>
-        <p>展示图待更新</p>
+        <p>Flow 实际运行界面（2026-02-07）</p>
       </div>
-      <article class="feature">
-        <h3>最新界面图准备中</h3>
-        <p>旧版本展示图已临时下线，收到你的新图片后会立即替换并重新发布。</p>
-      </article>
+      <div class="gallery">
+        <figure class="shot">
+          <img src="assets/flow-latest-ui.png" alt="Flow 插件与 Flow 页面联动界面" />
+          <figcaption>Flow 插件在实际生成页面中的操作与登录状态展示。</figcaption>
+        </figure>
+      </div>
     </section>
 
     <section id="pricing" class="card section">
