--- a/index.html
+++ b/index.html
@@ -11,13 +11,19 @@
   <header class="nav">
     <div class="nav-inner">
       <a class="brand" href="index.html" data-config="brandName">morepies Flow</a>
-      <nav class="menu">
-        <a href="#product">产品</a>
-        <a href="#features">功能</a>
-        <a href="#pricing">价格</a>
-        <a href="#policy">政策</a>
-        <a href="#contact">联系</a>
-      </nav>
+      <div class="nav-tools">
+        <nav class="menu">
+          <a href="#product">产品</a>
+          <a href="#features">功能</a>
+          <a href="#pricing">价格</a>
+          <a href="#policy">政策</a>
+          <a href="#contact">联系</a>
+        </nav>
+        <div class="lang-switch" aria-label="Language">
+          <a class="lang-link active" href="index.html">中文</a>
+          <a class="lang-link" href="index-en.html">EN</a>
+        </div>
+      </div>
     </div>
   </header>
 
