--- a/privacy.html
+++ b/privacy.html
@@ -10,12 +10,18 @@
   <header class="nav">
     <div class="nav-inner">
       <a class="brand" href="index.html" data-config="brandName">morepies Flow</a>
-      <nav class="menu">
-        <a href="index.html">返回主页</a>
-        <a href="terms.html">服务条款</a>
-        <a href="refund.html">退款政策</a>
-        <a href="contact.html">联系支持</a>
-      </nav>
+      <div class="nav-tools">
+        <nav class="menu">
+          <a href="index.html">返回主页</a>
+          <a href="terms.html">服务条款</a>
+          <a href="refund.html">退款政策</a>
+          <a href="contact.html">联系支持</a>
+        </nav>
+        <div class="lang-switch" aria-label="Language">
+          <a class="lang-link active" href="privacy.html">中文</a>
+          <a class="lang-link" href="privacy-en.html">EN</a>
+        </div>
+      </div>
     </div>
   </header>
 
