Improve showcase readability with full-width clickable image

--- a/index-en.html
+++ b/index-en.html
@@ -116,10 +116,12 @@
         <h2>UI Showcase</h2>
         <p>Real Flow runtime screenshot (2026-02-07)</p>
       </div>
-      <div class="gallery">
+      <div class="gallery gallery-single">
         <figure class="shot">
-          <img src="assets/flow-latest-ui.png" alt="Flow plugin and Flow page integrated interface" />
-          <figcaption>Flow plugin operation panel and login status in a real generation session.</figcaption>
+          <a class="shot-link" href="assets/flow-latest-ui.png" target="_blank" rel="noreferrer">
+            <img src="assets/flow-latest-ui.png" alt="Flow plugin and Flow page integrated interface" />
+          </a>
+          <figcaption>Flow plugin operation panel and login status in a real generation session. Click image to view full size.</figcaption>
         </figure>
       </div>
     </section>
