--- a/index.html
+++ b/index.html
@@ -115,10 +115,12 @@
         <h2>界面展示</h2>
         <p>Flow 实际运行界面（2026-02-07）</p>
       </div>
-      <div class="gallery">
+      <div class="gallery gallery-single">
         <figure class="shot">
-          <img src="assets/flow-latest-ui.png" alt="Flow 插件与 Flow 页面联动界面" />
-          <figcaption>Flow 插件在实际生成页面中的操作与登录状态展示。</figcaption>
+          <a class="shot-link" href="assets/flow-latest-ui.png" target="_blank" rel="noreferrer">
+            <img src="assets/flow-latest-ui.png" alt="Flow 插件与 Flow 页面联动界面" />
+          </a>
+          <figcaption>Flow 插件在实际生成页面中的操作与登录状态展示。点击图片可查看原图。</figcaption>
         </figure>
       </div>
     </section>
