Replace pricing cards with range comparison table and update free tier baseline

--- a/index-en.html
+++ b/index-en.html
@@ -128,26 +128,74 @@
 
     <section id="pricing" class="card section">
       <div class="section-head">
-        <h2>Service Pricing (Sample)</h2>
-        <p>Can be adjusted by requirements; final pricing is confirmed during order</p>
+        <h2>Plan Comparison by Price Range</h2>
+        <p>Choose based on quality targets and production intensity</p>
       </div>
-      <div class="price-grid">
-        <article class="price">
-          <h3>Starter</h3>
-          <p class="amount">USD 19+</p>
-          <p>Basic setup guidance, parameter recommendations, and one remote Q&A session.</p>
-        </article>
-        <article class="price">
-          <h3>Advanced</h3>
-          <p class="amount">USD 49+</p>
-          <p>Includes script queue setup, naming strategy, and workflow optimization advice.</p>
-        </article>
-        <article class="price">
-          <h3>Custom</h3>
-          <p class="amount">USD 99+</p>
-          <p>Requirement-based custom delivery with support period and documentation.</p>
-        </article>
+      <div class="compare-table-wrap">
+        <table class="compare-table" aria-label="Plan comparison table">
+          <thead>
+            <tr>
+              <th>Metric</th>
+              <th>Free</th>
+              <th>USD 9.99</th>
+              <th>USD 19.99</th>
+              <th>USD 39.99</th>
+              <th>USD 79.99</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th>Video Quality</th>
+              <td>720p</td>
+              <td>1080p</td>
+              <td>4K</td>
+              <td>4K</td>
+              <td>4K</td>
+            </tr>
+            <tr>
+              <th>Image Quality</th>
+              <td>Min 1K</td>
+              <td>2K</td>
+              <td>4K</td>
+              <td>4K</td>
+              <td>4K</td>
+            </tr>
+            <tr>
+              <th>Max Videos per Run</th>
+              <td>12</td>
+              <td>27</td>
+              <td>54</td>
+              <td>64</td>
+              <td>100 (practically unlimited)</td>
+            </tr>
+            <tr>
+              <th>Max Continuous Images per Run</th>
+              <td>25</td>
+              <td>50</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100 (practically unlimited)</td>
+            </tr>
+            <tr>
+              <th>Script Mode Daily Limit</th>
+              <td>3/day (+7 trial runs for new users)</td>
+              <td>7/day</td>
+              <td>14/day</td>
+              <td>30/day</td>
+              <td>Open for heavy usage</td>
+            </tr>
+            <tr>
+              <th>Extra Benefit</th>
+              <td>Core trial experience</td>
+              <td>Full HD workflow</td>
+              <td>Includes auto-cut helper tool</td>
+              <td>High-frequency creator tier</td>
+              <td>Flagship tier</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
+      <p class="lead" style="margin-top: 10px;">Note: The USD 79.99 tier is designed for high-intensity production and final limits are configured by real usage needs.</p>
     </section>
 
     <section id="policy" class="card section">
