--- a/index.html
+++ b/index.html
@@ -127,26 +127,74 @@
 
     <section id="pricing" class="card section">
       <div class="section-head">
-        <h2>服务价格（示例）</h2>
-        <p>可按需求调整；实际以下单沟通为准</p>
+        <h2>套餐对比（按价格区间）</h2>
+        <p>按你的画质需求和使用频率选择</p>
       </div>
-      <div class="price-grid">
-        <article class="price">
-          <h3>基础包</h3>
-          <p class="amount">USD 19+</p>
-          <p>基础安装指导、参数配置建议、一次远程答疑。</p>
-        </article>
-        <article class="price">
-          <h3>进阶包</h3>
-          <p class="amount">USD 49+</p>
-          <p>含脚本队列配置、下载命名策略、工作流优化建议。</p>
-        </article>
-        <article class="price">
-          <h3>定制包</h3>
-          <p class="amount">USD 99+</p>
-          <p>按具体需求定制，包含交付说明与后续支持周期。</p>
-        </article>
+      <div class="compare-table-wrap">
+        <table class="compare-table" aria-label="价格区间对比表">
+          <thead>
+            <tr>
+              <th>对比项</th>
+              <th>免费体验</th>
+              <th>USD 9.99</th>
+              <th>USD 19.99</th>
+              <th>USD 39.99</th>
+              <th>USD 79.99</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th>视频清晰度</th>
+              <td>720p</td>
+              <td>1080p</td>
+              <td>4K</td>
+              <td>4K</td>
+              <td>4K</td>
+            </tr>
+            <tr>
+              <th>图片清晰度</th>
+              <td>最低 1K 像素</td>
+              <td>2K</td>
+              <td>4K</td>
+              <td>4K</td>
+              <td>4K</td>
+            </tr>
+            <tr>
+              <th>单次视频上限</th>
+              <td>12</td>
+              <td>27</td>
+              <td>54</td>
+              <td>64</td>
+              <td>100（基本不限）</td>
+            </tr>
+            <tr>
+              <th>单次连续图片上限</th>
+              <td>25</td>
+              <td>50</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100（基本不限）</td>
+            </tr>
+            <tr>
+              <th>剧本模式（每天）</th>
+              <td>3 次（新用户赠送 7 次体验）</td>
+              <td>7 次</td>
+              <td>14 次</td>
+              <td>30 次</td>
+              <td>按高强度使用开放</td>
+            </tr>
+            <tr>
+              <th>额外权益</th>
+              <td>基础体验</td>
+              <td>高清下载能力</td>
+              <td>赠送自动截取工具</td>
+              <td>高频创作档</td>
+              <td>旗舰档位</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
+      <p class="lead" style="margin-top: 10px;">说明：79.99 档用于高频创作，具体上限会按实际使用场景配置。</p>
     </section>
 
     <section id="policy" class="card section">
