Add pricing range summary cards before detailed comparison table

--- a/index-en.html
+++ b/index-en.html
@@ -131,6 +131,23 @@
         <h2>Plan Comparison by Price Range</h2>
         <p>Choose based on quality targets and production intensity</p>
       </div>
+      <div class="range-grid">
+        <article class="range-card">
+          <h3>Range A: Trial</h3>
+          <p class="range-price">USD 0</p>
+          <p>For new users and low-intensity use. 720p video, 1K image baseline.</p>
+        </article>
+        <article class="range-card recommended">
+          <h3>Range B: Main Creator</h3>
+          <p class="range-price">USD 9.99 - 19.99</p>
+          <p>From 1080p to 4K with higher batch limits. Best for daily production.</p>
+        </article>
+        <article class="range-card">
+          <h3>Range C: High Frequency</h3>
+          <p class="range-price">USD 39.99 - 79.99</p>
+          <p>For heavy workloads with stronger 4K capacity and larger task volume.</p>
+        </article>
+      </div>
       <div class="compare-table-wrap">
         <table class="compare-table" aria-label="Plan comparison table">
           <thead>
