--- a/index.html
+++ b/index.html
@@ -130,6 +130,23 @@
         <h2>套餐对比（按价格区间）</h2>
         <p>按你的画质需求和使用频率选择</p>
       </div>
+      <div class="range-grid">
+        <article class="range-card">
+          <h3>区间 A：体验入门</h3>
+          <p class="range-price">USD 0</p>
+          <p>适合新用户试用。720p 视频、1K 图片，轻量任务与基础熟悉流程。</p>
+        </article>
+        <article class="range-card recommended">
+          <h3>区间 B：主力创作</h3>
+          <p class="range-price">USD 9.99 - 19.99</p>
+          <p>从 1080p 到 4K，视频/图片上限明显提升。适合日常稳定出片。</p>
+        </article>
+        <article class="range-card">
+          <h3>区间 C：高频生产</h3>
+          <p class="range-price">USD 39.99 - 79.99</p>
+          <p>高并发高频创作场景，重点保障 4K 与更高任务容量。</p>
+        </article>
+      </div>
       <div class="compare-table-wrap">
         <table class="compare-table" aria-label="价格区间对比表">
           <thead>
