--- a/index.html
+++ b/index.html
@@ -149,6 +149,14 @@
       </div>
       <div class="compare-table-wrap">
         <table class="compare-table" aria-label="价格区间对比表">
+          <colgroup>
+            <col class="metric-col" />
+            <col class="plan-col" />
+            <col class="plan-col" />
+            <col class="plan-col" />
+            <col class="plan-col" />
+            <col class="plan-col" />
+          </colgroup>
           <thead>
             <tr>
               <th>对比项</th>
@@ -161,7 +169,7 @@
           </thead>
           <tbody>
             <tr>
-              <th>视频清晰度</th>
+              <th>视频下载最大清晰度</th>
               <td>720p</td>
               <td>1080p</td>
               <td>4K</td>
@@ -169,7 +177,7 @@
               <td>4K</td>
             </tr>
             <tr>
-              <th>图片清晰度</th>
+              <th>图片下载最大清晰度</th>
               <td>最低 1K 像素</td>
               <td>2K</td>
               <td>4K</td>
@@ -177,7 +185,7 @@
               <td>4K</td>
             </tr>
             <tr>
-              <th>单次视频上限</th>
+              <th>单次视频任务上限（连续执行）</th>
               <td>12</td>
               <td>27</td>
               <td>54</td>
@@ -185,7 +193,7 @@
               <td>100（基本不限）</td>
             </tr>
             <tr>
-              <th>单次连续图片上限</th>
+              <th>单次连续图片任务上限</th>
               <td>25</td>
               <td>50</td>
               <td>100</td>
@@ -211,7 +219,8 @@
           </tbody>
         </table>
       </div>
-      <p class="lead" style="margin-top: 10px;">说明：79.99 档用于高频创作，具体上限会按实际使用场景配置。</p>
+      <p class="lead pricing-note">定义：视频/图片“下载最大清晰度”是成品可下载的最高分辨率；“单次视频任务上限”是一轮中可连续执行的视频生成任务数量。</p>
+      <p class="lead pricing-note">补充：USD 79.99 档用于高频创作，具体上限会按实际使用场景配置。</p>
     </section>
 
     <section id="policy" class="card section">
