--- a/privacy-en.html
+++ b/privacy-en.html
@@ -45,7 +45,7 @@
       </ul>
 
       <h2>3. Data Sharing</h2>
-      <p>We do not sell or arbitrarily share your personal data. Payment-related data may be processed by platforms such as PayPal according to their policies.</p>
+      <p>We do not sell or arbitrarily share your personal data. Payment-related data may be processed by third-party payment platforms according to their policies.</p>
 
       <h2>4. Retention and Deletion</h2>
       <p>Data is retained only within necessary delivery and compliance scope. You can request deletion via email and we will process it within a reasonable timeframe.</p>
