--- a/privacy.html
+++ b/privacy.html
@@ -45,7 +45,7 @@
       </ul>
 
       <h2>3. 数据共享</h2>
-      <p>除法律要求或支付处理需要外，我们不会出售或任意共享你的个人数据。与支付相关的信息可能由 PayPal 等支付平台按其规则处理。</p>
+      <p>除法律要求或支付处理需要外，我们不会出售或任意共享你的个人数据。与支付相关的信息可能由第三方支付平台按其规则处理。</p>
 
       <h2>4. 数据保留与删除</h2>
       <p>仅在完成服务与合规需求所需范围内保留数据。你可通过邮箱联系删除请求，我们会在合理时间内处理。</p>
